added 4 new death effects